# key-word-api

./: .flake8  pyproject.toml
src/: app.py  config.py  migrate.py  models.py
src/migrations/versions/: d59e204e8dfa_.py  ee7e0b1cb4d2_.py
